linera-views-derive/src/snapshots/linera_views_derive__tests__test_generate_hash_view_code_C_with_where.snap
---
source: linera-views-derive/src/lib.rs
expression: pretty(generate_hash_view_code(input))
---
impl<C, MyParam> linera_views::views::HashableView for TestView<C, MyParam>
where
    MyParam: Send + Sync + 'static,
    C: linera_views::context::Context + Send + Sync + Clone + 'static,
    RegisterView<C, usize>: linera_views::views::HashableView,
    CollectionView<C, usize, RegisterView<C, usize>>: linera_views::views::HashableView,
    Self: Send + Sync,
{
    type Hasher = linera_views::sha3::Sha3_256;
    async fn hash_mut(
        &mut self,
    ) -> Result<
        <Self::Hasher as linera_views::views::Hasher>::Output,
        linera_views::ViewError,
    > {
        use linera_views::views::{Hasher, HashableView};
        use std::io::Write;
        let mut hasher = Self::Hasher::default();
        hasher.write_all(self.register.hash_mut().await?.as_ref())?;
        hasher.write_all(self.collection.hash_mut().await?.as_ref())?;
        Ok(hasher.finalize())
    }
    async fn hash(
        &self,
    ) -> Result<
        <Self::Hasher as linera_views::views::Hasher>::Output,
        linera_views::ViewError,
    > {
        use linera_views::views::{Hasher, HashableView};
        use std::io::Write;
        let mut hasher = Self::Hasher::default();
        hasher.write_all(self.register.hash().await?.as_ref())?;
        hasher.write_all(self.collection.hash().await?.as_ref())?;
        Ok(hasher.finalize())
    }
}
