linera-views-derive/src/snapshots/linera_views_derive__tests__test_generate_root_view_code_C.snap
---
source: linera-views-derive/src/lib.rs
expression: pretty(generate_root_view_code(input))
---
impl<C> linera_views::views::RootView for TestView<C>
where
    Self: linera_views::views::View,
{
    async fn save(&mut self) -> Result<(), linera_views::ViewError> {
        use linera_views::{
            context::Context as _, batch::Batch, store::WritableKeyValueStore as _,
            views::View as _,
        };
        let mut batch = Batch::new();
        self.pre_save(&mut batch)?;
        if !batch.is_empty() {
            self.context().store().write_batch(batch).await?;
        }
        self.post_save();
        Ok(())
    }
    async fn save_and_drop(self) -> Result<(), linera_views::ViewError> {
        use linera_views::{
            context::Context as _, batch::Batch, store::WritableKeyValueStore as _,
            views::View as _,
        };
        let mut batch = Batch::new();
        self.pre_save(&mut batch)?;
        if !batch.is_empty() {
            self.context().store().write_batch(batch).await?;
        }
        Ok(())
    }
}
